# bors-rs

./: .gitignore  Cargo.toml
bors/: Cargo.toml
github/: Cargo.toml
github/src/: pull_request.rs
probot/: Cargo.toml
src/github/: check.rs  events.rs  repo.rs
