[package]
name = "github"
version = "0.1.0"
authors = ["Brandon Williams <bmwill@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
log = "0.4.8"
hmac-sha1 = "0.1.3"
hex = "0.4.2"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.11"

[dev-dependencies]
env_logger = "0.7"
tokio = { version = "0.2", features = ["full"] }
